# RtspToWeb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
configs/: config.ini
inc/: RtspCapture.h  VideoServer.h  log.h
scripts/: build_ffmpeg.sh
src/: RtspCapture.cc  VideoServer.cc  log.cc  main.cc
